--- a/templates/painel/index.html.twig
+++ b/templates/painel/index.html.twig
@@ -8,7 +8,7 @@
     .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
 </style>
 
-<div class="example-wrapper">
+{# <div class="example-wrapper">
     <h1>Hello {{ controller_name }}! ✅</h1>
 
     This friendly message is coming from:
@@ -16,5 +16,40 @@
         <li>Your controller at <code><a href="{{ '/var/www/html/infinityaion/src/Controller/PainelController.php'|file_link(0) }}">src/Controller/PainelController.php</a></code></li>
         <li>Your template at <code><a href="{{ '/var/www/html/infinityaion/templates/painel/index.html.twig'|file_link(0) }}">templates/painel/index.html.twig</a></code></li>
     </ul>
-</div>
+</div> #}
+    <section id="about">
+      <div class="container">
+        <div class="row">
+
+          <div class="col-lg-6">
+            <h2 class="title">Few Words About Us</h2>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+            </p>
+
+            <div class="">
+              <div class="icon"></div>
+              <h4 class="title"><a href="">Eiusmod Tempor</a></h4>
+              <p class="description">Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi</p>
+            </div>
+
+            <div class="">
+              <div class="icon"></div>
+              <h4 class="title"><a href="">Magni Dolores</a></h4>
+              <p class="description">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
+            </div>
+
+            <div class="">
+              <div class="icon"></div>
+              <h4 class="title"><a href="">Dolor Sitema</a></h4>
+              <p class="description">Minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat tarad limino ata</p>
+            </div>
+
+          </div>
+
+          <div class="col-lg-6"></div>
+        </div>
+
+      </div>
+    </section><!-- End About Section -->
 {% endblock %}
