--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,6 +6,10 @@
 /* basic */
 * {box-sizing: border-box;}
 
+html {
+  scroll-behavior: smooth;
+}
+
 body { 
   margin: 0;
   font-family: Arial, Helvetica, sans-serif;
@@ -26,6 +30,7 @@ body {
 
 #navbar a {
   float: left;
+  transition: linear .4s;
 }
 
 #navbar #logo {
@@ -37,7 +42,7 @@ body {
 
 #navbar-right {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
   grid-template-rows: 50px 5px;
   float: right;
   padding-top: 10px;
@@ -50,7 +55,7 @@ body {
   padding: 12px;
   text-decoration: none;
   font-family: 'Asul';
-  font-size: 17px; 
+  font-size: 13px; 
   line-height: 25px;
   border-radius: 4px;
   width: 90px;
@@ -75,30 +80,42 @@ body {
 }
 
 .two:hover ~ hr {
-  margin-left: 20%;
+  margin-left: 12.5%;
 }
 
 .three:hover ~ hr {
-  margin-left: 40%;
+  margin-left: 25%;
 }
 
 .four:hover ~ hr {
-  margin-left: 60%;
+  margin-left: 37.5%;
 }
 
 .five:hover ~ hr {
-  margin-left: 80%;
+  margin-left: 50%;
+}
+
+.six:hover ~ hr {
+  margin-left: 62.5%;
+}
+
+.seven:hover ~ hr {
+  margin-left: 75%;
+}
+
+.eight:hover ~ hr {
+  margin-left: 87.5%;
 }
 
 hr {
-  grid-column: 1/6;
+  grid-column: 1/9;
   position: relative;
   height: .25rem;
-  width: 20%;
+  width: 12.5%;
   margin-top: 0px;
   background: tomato;
   border: none;
-  transition: .3s ease-in-out;
+  transition: .3s ease-in-out;               
 }
 
 /* carousel */
@@ -113,4 +130,133 @@ hr {
   width: 100%;
   height: 100vh;
   background-color: rgba(20,20,20,.5);
+}
+
+/* noticias */
+#noticias{
+  margin-top: 50px;
+  padding-top: 150px;
+}
+
+.noticias-box * {
+  transition: linear .4s;
+}
+
+.noticias-box a img{
+  opacity: 0.5;
+  margin-top: 50px;
+  width: 200px;
+  height: 200px;
+  box-shadow: 2px 2px 10px 3px rgb(150, 150, 150);
+}
+
+.noticias-box a img:hover {
+  opacity: .9;
+  box-shadow: 2px 2px 10px 3px rgb(80, 80, 80);
+}
+
+/* Sobre Jogo */
+#jogo {
+  margin-top: 50px;
+  margin-bottom: 100px;
+  padding-top: 150px;
+}
+
+.jogo-box {
+  display: grid;
+  grid-template-rows: 100px 200px;
+  justify-content: center;
+  margin-top: 50px;
+}
+
+.jogo-box .title {
+  width: 100px;
+  height: 100px;
+  background-color: white;
+  border-radius: 100%;
+  margin-left: auto;
+  margin-right: auto;
+  z-index: 2;
+  border: 2px solid tomato;
+  box-shadow: 0 0 5px 3px tomato;
+}
+
+.jogo-box .title i{
+  font-size: 40px;
+  margin-top: 25%;
+}
+
+.jogo-box .info {
+  margin-top: -50px;
+  padding-top: 50px;
+  width: 250px;
+  height: 200px;
+  background-color: rgb(210,210,210);
+  z-index: 1;
+  border: 2px solid tomato;
+  border-radius: 40%;
+}
+
+/* Download */
+#download {
+  width: 100%;
+  height: 100vh;
+  background-color: rgb(200,200, 200);
+  padding-top: 140px;
+}
+
+#download img{
+  width: 50vh;
+  height: 50vh;
+  margin-top: 40px;
+  transition: linear .2s;
+  opacity: .6;
+  border-radius: 10vh;
+}
+
+#download img:hover{
+  margin-top: 10px;
+  width: 70vh;
+  height: 70vh;
+  transition: linear .2s;
+  opacity: 1;
+  box-shadow: 5px 5px 15px 5px rgb(20,20,20);
+}
+
+/* recursos */
+#recursos {
+  width: 100%;
+  height: 100vh;
+  padding-top: 140px;
+}
+
+.rec-center {
+  align-items: center;
+}
+
+#recursos a img{
+  width: 150px;
+  height: 350px;
+  margin-top: 40px;
+  transition: linear .2s;
+  opacity: .6;
+  box-shadow: 5px 5px 15px 5px rgb(20,20,20);
+  margin-left: auto;
+  margin-right: auto;
+}
+
+#recursos a img:hover{
+  margin-top: 20px;
+  transition: linear .2s;
+  opacity: .9;
+  box-shadow: 5px 5px 15px 5px rgb(20,20,20);
+}
+
+/* footer */
+#footer {
+  position: relative;
+  background-color: rgb(50,50,50);
+  width: 100%;
+  height: 150px;
+  padding-top: 50px;
 }
