--- a/templates/site/index.html.twig
+++ b/templates/site/index.html.twig
@@ -11,13 +11,16 @@
   {# ++++++++++ Header ++++++++++ #}
   <header id="header">
     <nav id="navbar">
-      <div><a href="#default"><img src="build/img/infinityaion.png" id="logo"></a></div>
+      <div><a href="#carousel"><img src="build/img/infinityaion.png" id="logo"></a></div>
       <div id="navbar-right">
-        <a class="active one text-center tcenter" href="#home">Home</a>
-        <a href="#contact" class="two text-center tcenter">Contact</a>
-        <a href="#about" class="three text-center tcenter">About</a>
-        <a href="#contact" class="four text-center tcenter">Contact</a>
-        <a href="#about" class="five text-center tcenter">About</a>
+        <a class="active one text-center tcenter" href="#carousel">Iníco</a>
+        <a href="#noticias" class="two text-center tcenter">Notícias</a>
+        <a href="#jogo" class="three text-center tcenter">O Jogo</a>
+        <a href="#download" class="four text-center tcenter">Download</a>
+        <a href="#recursos" class="five text-center tcenter">Recursos</a>
+        <a href="register" class="six text-center tcenter">Registre-se</a>
+        <a href="login" class="seven text-center tcenter">Log In</a>
+        <a href="#contact" class="eight text-center tcenter">Contato</a>
         <hr>
       </div>
     </nav>
@@ -60,26 +63,146 @@
       </a> #}
     </div>
   </section>
-  <div style="height: 2000px;">
-    
-  </div>
   {# End Carousel #}
 
-  <!-- ======= Hero Section ======= -->
-  <!-- <section id="hero">
-    <div class="hero-container">
-      <h1>Welcome to Regna</h1>
-      <h2>We are team of talanted designers making websites with Bootstrap</h2>
-      <a href="#about" class="btn-get-started">Get Started</a>
+  {# ++++++++++ Noticias +++++++++++ #}
+  <section id="noticias">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-12 col-sm-12 col-xs-12 text-center">
+          <h3>Notícias</h3>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-lg-3 col-sm-6 col-xs-12 text-center">
+          <div class="noticias-box">
+            <a href="#"><img src="{{ asset('build/img/noticias/1.jpg')}}"></a>
+          </div>
+        </div>
+        <div class="col-lg-3 col-sm-6 col-xs-12 text-center">
+          <div class="noticias-box">
+            <a href="#"><img src="{{ asset('build/img/noticias/1.jpg')}}"></a>
+          </div>
+        </div>
+        <div class="col-lg-3 col-sm-6 col-xs-12 text-center">
+          <div class="noticias-box">
+            <a href="#"><img src="{{ asset('build/img/noticias/1.jpg')}}"></a>
+          </div>
+        </div>
+        <div class="col-lg-3 col-sm-6 col-xs-12 text-center">
+          <div class="noticias-box">
+            <a href="#"><img src="{{ asset('build/img/noticias/1.jpg')}}"></a>
+          </div>
+        </div>
+      </div>
     </div>
-  </section> -->
-  <!-- End Hero Section -->
+  </section>
+  {# End Noticias #}
 
-  <!-- ======= Footer ======= -->
+  {# ++++++++++ O Jogo +++++++++++ #}
+  <section id="jogo">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-12 col-sm-12 col-xs-12 text-center">
+          <h3>Sobre o jogo</h3>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-lg-4 col-sm-4 col-xs-12 text-center">
+          <div class="jogo-box">
+            <div class="title"><i class="fa fa-angle-double-up"></i></div>
+            <div class="info"></div>
+          </div>
+        </div>
+        <div class="col-lg-4 col-sm-4 col-xs-12 text-center">
+          <div class="jogo-box">
+            <div class="title"><i class="fa fa-angle-double-up"></i></div>
+            <div class="info"></div>
+          </div>
+        </div>
+        <div class="col-lg-4 col-sm-4 col-xs-12 text-center">
+          <div class="jogo-box">
+            <div class="title"><i class="fa fa-angle-double-up"></i></div>
+            <div class="info"></div>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-lg-4 col-sm-4 col-xs-12 text-center">
+          <div class="jogo-box">
+            <div class="title"><i class="fa fa-angle-double-up"></i></div>
+            <div class="info"></div>
+          </div>
+        </div>
+        <div class="col-lg-4 col-sm-4 col-xs-12 text-center">
+          <div class="jogo-box">
+            <div class="title"><i class="fa fa-angle-double-up"></i></div>
+            <div class="info"></div>
+          </div>
+        </div>
+        <div class="col-lg-4 col-sm-4 col-xs-12 text-center">
+          <div class="jogo-box">
+            <div class="title"><i class="fa fa-angle-double-up"></i></div>
+            <div class="info"></div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  {# End Noticias #}
+
+  {# +++++++++ Download ++++++++++ #}
+  <section id="download">
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-lg-6 col-sm-6 col-xs-12 text-center">
+          <a href="#" style="margin-top:50px;"><img src="{{ asset('build/img/d1.jpg') }}"></a>
+        </div>
+        <div class="col-lg-6 col-sm-6 col-xs-12 text-center">
+          <a href="#" style="margin-top:50px;"><img src="{{ asset('build/img/d2.jpg') }}"></a>
+        </div>
+      </div>
+    </div>
+  </section>
+  {# End Download #}
+
+  {# ++++++++++ Shop ++++++++++ #}
+  <section id="recursos">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-12 col-sm-12 col-xs-12 text-center">
+          <h3>Recursos do Jogo</h3>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-lg-2 col-sm-4 col-xs-12 text-center">
+          <a href="#"><img src="{{ asset('build/img/noticias/1.jpg')}}"></a>
+        </div>
+        <div class="col-lg-2 col-sm-4 col-xs-12 text-center">
+          <a href="#"><img src="{{ asset('build/img/noticias/1.jpg')}}"></a>
+        </div>
+        <div class="col-lg-2 col-sm-4 col-xs-12 text-center">
+          <a href="#"><img src="{{ asset('build/img/noticias/1.jpg')}}"></a>
+        </div>
+        <div class="col-lg-2 col-sm-4 col-xs-12 text-center">
+          <a href="#"><img src="{{ asset('build/img/noticias/1.jpg')}}"></a>
+        </div>
+        <div class="col-lg-2 col-sm-4 col-xs-12 text-center">
+          <a href="#"><img src="{{ asset('build/img/noticias/1.jpg')}}"></a>
+        </div>
+        <div class="col-lg-2 col-sm-4 col-xs-12 text-center">
+          <a href="#"><img src="{{ asset('build/img/noticias/1.jpg')}}"></a>
+        </div>
+      </div>
+    </div>
+  </section>
+  {# End Recursos #}
+
+  {# +++++++++++ Footer +++++++++++ #}
   <footer id="footer">
-    
-  </footer><!-- End Footer -->
-
-  <a href="#" class="back-to-top"><i class="fa fa-chevron-up"></i></a>
- 
+    <div class="text-center">
+      <h3>Design By Jorge Monteiro</h3>
+    </div>
+  </footer>
+  {# End Footer #}
 {% endblock %}
