--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -126,7 +126,7 @@ hr {
   background-position: center;
 }
 
-.carousel-div div {
+.carousel-div div.content {
   width: 100%;
   height: 100vh;
   background-color: rgba(20,20,20,.5);
