--- a/templates/painel/contents/admin/admin.html.twig
+++ b/templates/painel/contents/admin/admin.html.twig
@@ -72,31 +72,47 @@
         </div>
     </div>
 
-    <div class="card" style="background-color:rgb(240,240,240); margin-top:20px;">
-        <div class="card-body">
-            <div class="row">
-                <h4 style="margin-left: 50px;">Players</h4>
-            </div>
-            <div class="row">
-                <div class="col-lg-4 text-center">
-                    
+    <div class="row">
+        <div class="col-lg-6">
+            <div class="card" style="background-color:rgb(240,240,240); margin-top:20px;">
+                <div class="card-body">
+                    <div class="row">
+                        <div class="col-lg-12">
+                            <h4 style="margin-left: 50px;">Players</h4>        
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-lg-6 text-center">
+                            <a href="{{ path('admin_coin') }}" class="btn btn-info" role="button">Auditoria</a>
+                        </div>
+                        <div class="col-lg-6 text-center">
+                            <a href="{{ path('admin_player') }}" class="btn btn-info" role="button">Player Status</a>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-lg-6 text-center">
+                            <a href="{{ path('admin_posts') }}" class="btn btn-info" role="button">Controle de postagens</a>
+                        </div>
+                        <div class="col-lg-6 text-center">
+                            <a href="{{ path('admin_comments') }}" class="btn btn-info" role="button">Controle de comentários</a>
+                        </div>
+                    </div>
                 </div>
-                <div class="col-lg-4 text-center">
-                    
-                </div>
-                <div class="col-lg-4 text-center">
-                    
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-lg-4 text-center">
-                    
-                </div>
-                <div class="col-lg-4 text-center">
-                    
-                </div>
-                <div class="col-lg-4 text-center">
-                    
+            </div>        
+        </div>
+        <div class="col-lg-6">
+            <div class="card" style="background-color:rgb(240,240,240); margin-top:20px;">
+                <div class="card-body">
+                    <div class="row">
+                        <div class="col-lg-12">
+                            <h4 style="margin-left: 50px;">Orçamento</h4>        
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-lg-12 text-center">
+                            <a href="{{ path('admin_history') }}" class="btn btn-info" role="button">Histórico de coins</a>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
@@ -109,24 +125,15 @@
             </div>
             <div class="row">
                 <div class="col-lg-4 text-center">
-                    
+                    <a href="{{ path('admin_cms_carousel') }}" class="btn btn-info" role="button">Carousel</a>
                 </div>
                 <div class="col-lg-4 text-center">
-                    
+                    <a href="{{ path('admin_cms_notice') }}" class="btn btn-info" role="button">Notícias</a>
                 </div>
                 <div class="col-lg-4 text-center">
-                    
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-lg-4 text-center">
-                    
-                </div>
-                <div class="col-lg-4 text-center">
-                    
-                </div>
-                <div class="col-lg-4 text-center">
-                    
+                    <div class="col-lg-4 text-center">
+                        <a href="{{ path('admin_cms_resource') }}" class="btn btn-info" role="button">Recursos</a>
+                    </div>
                 </div>
             </div>
         </div>
