--- a/templates/site/index.html.twig
+++ b/templates/site/index.html.twig
@@ -32,28 +32,38 @@
     
     <div id="demo" class="carousel slide" data-ride="carousel">
       <ul class="carousel-indicators">
-        <li data-target="#demo" data-slide-to="0" class="active"></li>
-        <li data-target="#demo" data-slide-to="1"></li>
-        <li data-target="#demo" data-slide-to="2"></li>
-        <li data-target="#demo" data-slide-to="3"></li>
-        <li data-target="#demo" data-slide-to="4"></li>
+        {% set active = true %}
+        {% set slide = 0 %}
+        {% for item in carousel %}
+          {% if active == true %}
+            <li data-target="#demo" data-slide-to="{{slide}}" class="active"></li>
+            {% set active = false %}
+          {% else %}
+            <li data-target="#demo" data-slide-to="{{slide}}"></li>    
+          {% endif %}
+          {% set slide = slide + 1 %}  
+        {% endfor %}
       </ul>
       <div class="carousel-inner">
-        <div class="carousel-item active carousel-div" style="background-image: url({{ asset('build/img/intro-carousel/1.jpg')}});">
-          <div></div>
-        </div>
-        <div class="carousel-item carousel-div" style="background-image: url({{ asset('build/img/intro-carousel/2.jpg')}});">
-          <div></div>
-        </div>
-        <div class="carousel-item carousel-div" style="background-image: url({{ asset('build/img/intro-carousel/3.jpg')}});">
-          <div></div>
-        </div>
-        <div class="carousel-item carousel-div" style="background-image: url({{ asset('build/img/intro-carousel/4.jpg')}});">
-          <div></div>
-        </div>
-        <div class="carousel-item carousel-div" style="background-image: url({{ asset('build/img/intro-carousel/5.jpg')}});">
-          <div></div>
-        </div>
+        {% set active = true %}
+        {% for item in carousel %}
+          {% if active == true %}
+            <div class="carousel-item active carousel-div" id="carousel-{{item.id}}" style="background-image: url({{ asset('uploads/cms/' ~ item.imageFull)}})">
+              <div class="content">
+                <div style="padding-top:200px; padding-left:200px;"><h1 style="color: white">{{item.title}}</h1></div>
+                <div style="padding-left:200px;"><h4 style="color: white;">{{item.text}}</h4></div>
+              </div>
+            </div>
+            {% set active = false %}
+          {% else %}
+            <div class="carousel-item carousel-div" id="carousel-{{item.id}}" style="background-image: url({{ asset('uploads/cms/' ~ item.imageFull)}})">
+              <div class="content">
+                <div style="padding-top:200px; padding-left:200px;"><h1 style="color: white">{{item.title}}</h1></div>
+                <div style="padding-left:200px;"><h4 style="color: white;">{{item.text}}</h4></div>
+              </div>
+            </div>
+          {% endif %}
+        {% endfor %}
       </div>
       {# <a class="carousel-control-prev" href="#demo" data-slide="prev">
         <span class="carousel-control-prev-icon"></span>
@@ -74,26 +84,17 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-lg-3 col-sm-6 col-xs-12 text-center">
-          <div class="noticias-box">
-            <a href="#"><img src="{{ asset('build/img/noticias/1.jpg')}}"></a>
-          </div>
-        </div>
-        <div class="col-lg-3 col-sm-6 col-xs-12 text-center">
-          <div class="noticias-box">
-            <a href="#"><img src="{{ asset('build/img/noticias/1.jpg')}}"></a>
-          </div>
-        </div>
-        <div class="col-lg-3 col-sm-6 col-xs-12 text-center">
-          <div class="noticias-box">
-            <a href="#"><img src="{{ asset('build/img/noticias/1.jpg')}}"></a>
-          </div>
-        </div>
-        <div class="col-lg-3 col-sm-6 col-xs-12 text-center">
-          <div class="noticias-box">
-            <a href="#"><img src="{{ asset('build/img/noticias/1.jpg')}}"></a>
-          </div>
-        </div>
+        {% set count = 0 %}
+        {% for item in notice %}
+          {% if count < 4 %}
+            <div class="col-lg-3 col-sm-6 col-xs-12 text-center">
+              <div class="noticias-box">
+                <a href="#"><img src="{{ asset('uploads/cms/' ~ item.image) }}"></a>
+              </div>
+            </div>
+          {% endif %}
+          {% set count = count + 1 %}
+        {% endfor %}
       </div>
     </div>
   </section>
@@ -175,24 +176,15 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-lg-2 col-sm-4 col-xs-12 text-center">
-          <a href="#"><img src="{{ asset('build/img/noticias/1.jpg')}}"></a>
-        </div>
-        <div class="col-lg-2 col-sm-4 col-xs-12 text-center">
-          <a href="#"><img src="{{ asset('build/img/noticias/1.jpg')}}"></a>
-        </div>
-        <div class="col-lg-2 col-sm-4 col-xs-12 text-center">
-          <a href="#"><img src="{{ asset('build/img/noticias/1.jpg')}}"></a>
-        </div>
-        <div class="col-lg-2 col-sm-4 col-xs-12 text-center">
-          <a href="#"><img src="{{ asset('build/img/noticias/1.jpg')}}"></a>
-        </div>
-        <div class="col-lg-2 col-sm-4 col-xs-12 text-center">
-          <a href="#"><img src="{{ asset('build/img/noticias/1.jpg')}}"></a>
-        </div>
-        <div class="col-lg-2 col-sm-4 col-xs-12 text-center">
-          <a href="#"><img src="{{ asset('build/img/noticias/1.jpg')}}"></a>
-        </div>
+        {% set count = 0 %}
+        {% for item in resource %}
+          {% if count < 6 %}
+            <div class="col-lg-2 col-sm-4 col-xs-12 text-center">
+              <a href="#"><img src="{{ asset('uploads/cms/' ~ item.image) }}"></a>
+            </div>
+          {% endif %}
+          {% set count = count + 1 %}
+        {% endfor %}
       </div>
     </div>
   </section>
