--- a/assets/css/painel.css
+++ b/assets/css/painel.css
@@ -139,14 +139,9 @@
     width: 200px;
     height: 100vh;
     background-color: #2A2A2A;
-    justify-content: center;
-    display: flex;
-}
-
-#main #offer img{
-    margin-top: 30px;
-    width: 150px;
-    height: 150px;
+    display: grid;
+    grid-template-rows: 1fr 1fr 1fr;
+    color: white;
 }
 
 #content #title{
