--- a/templates/painel/painel.html.twig
+++ b/templates/painel/painel.html.twig
@@ -52,9 +52,29 @@
   {% block content %}{% endblock %}
   </div>
   <div id="offer">
-    <div><img src="{{ asset('build/img/perfil.jpg')}}"><div>
-    <div><img src="{{ asset('build/img/perfil.jpg')}}"><div>
-    <div><img src="{{ asset('build/img/perfil.jpg')}}"><div>
+    {% set count = 0 %}
+    {% for item in promo %}
+      {% if count < 3 %}
+        <div class="row">
+          <div class="col-lg-12 item-content text-center">
+            <div style="grid-column: 1/3;"><img src="{{ asset('uploads/item/' ~ item.image)}}" style="width:100px"></div>
+            <div style="grid-column: 1/3; height: 45px;"><small>{{ item.name }}</small></div>
+            {% if item.promo %}
+                <div style="grid-column: 1; text-decoration: line-through;">{{ item.price }}</div>
+                <div style="grid-column: 2;">{{ item.price - (item.price * (item.discount /100 )) }}</div>
+            {% else %}
+                <div style="grid-column: 1/3;">{{ item.price }}</div>
+            {% endif %}
+            <div class="text-center" style="grid-column: 1/3;">
+                <button type="button" class="btn btn-success" data-toggle="modal" data-target="#showitem" data-id="{{ item.aionId }}" data-set="{{ item.amount }}">
+                    Comprar
+                </button>
+            </div>
+          </div>
+        </div>
+      {% endif %}
+      {% set count = count + 1 %}
+    {% endfor %}
   </div>
 </div>    
 {% endblock %}
