--- a/templates/painel/contents/coin/coin.html.twig
+++ b/templates/painel/contents/coin/coin.html.twig
@@ -7,19 +7,19 @@
     </div>
     <div class="row">
         <div class="col-lg-3 text-center">
-            <a href="#" data-toggle="modal" data-target="#coin-20"><img class="coin" src="{{ asset('build/img/coin.png') }}"></a>
-            {% include "painel/contents/coin/modals/coin-20.html.twig" %}
+            <a href="#" data-toggle="modal" data-target="#coin-30"><img class="coin" src="{{ asset('build/img/3000IC.png') }}"></a>
+            {% include "painel/contents/coin/modals/coin-30.html.twig" %}
         </div>
         <div class="col-lg-3 text-center">
-            <a href="#" data-toggle="modal" data-target="#coin-50"><img class="coin" src="{{ asset('build/img/coin.png') }}"></a>
+            <a href="#" data-toggle="modal" data-target="#coin-50"><img class="coin" src="{{ asset('build/img/5000IC.png') }}"></a>
             {% include "painel/contents/coin/modals/coin-50.html.twig" %}
         </div>
         <div class="col-lg-3 text-center">
-            <a href="#" data-toggle="modal" data-target="#coin-80"><img class="coin" src="{{ asset('build/img/coin.png') }}"></a>
+            <a href="#" data-toggle="modal" data-target="#coin-80"><img class="coin" src="{{ asset('build/img/8000IC.png') }}"></a>
             {% include "painel/contents/coin/modals/coin-80.html.twig" %}
         </div>
         <div class="col-lg-3 text-center">
-            <a href="#" data-toggle="modal" data-target="#coin-100"><img class="coin" src="{{ asset('build/img/coin.png') }}"></a>
+            <a href="#" data-toggle="modal" data-target="#coin-100"><img class="coin" src="{{ asset('build/img/10000IC.png') }}"></a>
             {% include "painel/contents/coin/modals/coin-100.html.twig" %}
         </div>
     </div>
