--- a/templates/painel/contents/config/config.html.twig
+++ b/templates/painel/contents/config/config.html.twig
@@ -13,12 +13,14 @@
                 <h4 style="margin-left: 50px;">Atualizar Dados</h4>
             </div>
             <div class="row">
-                <div class="col-lg-12 text-center">
-                    <button type="button" class="btn btn-success" data-toggle="modal" data-target="#editDados">
+                <div class="col-lg-4"></div>
+                <div class="col-lg-4 text-center">
+                    <button type="button" class="btn btn-green" data-toggle="modal" data-target="#editDados">
                         Atualizar dados
                     </button>
                     {% include "painel/contents/config/modals/atualizar.html.twig" %}
                 </div>
+                <div class="col-lg-4"></div>
             </div>
         </div>
     </div>
@@ -28,12 +30,14 @@
                 <h4 style="margin-left: 50px;">Controle de Mensagens</h4>
             </div>
             <div class="row">
-                <div class="col-lg-12 text-center">
-                    <button type="button" class="btn btn-info" data-toggle="modal" data-target="#msnConfig">
+                <div class="col-lg-4"></div>
+                <div class="col-lg-4 text-center">
+                    <button type="button" class="btn btn-blue" data-toggle="modal" data-target="#msnConfig">
                         Editar controle de mensagens
                     </button>
                     {% include "painel/contents/config/modals/msnconfig.html.twig" %}
                 </div>
+                <div class="col-lg-4"></div>
             </div>
         </div>
     </div>
@@ -43,12 +47,14 @@
                 <h4 style="margin-left: 50px;">Redefinir Senha</h4>
             </div>
             <div class="row">
-                <div class="col-lg-12 text-center">
-                    <button type="button" class="btn btn-info" data-toggle="modal" data-target="#redefinirSenha">
+                <div class="col-lg-4"></div>
+                <div class="col-lg-4 text-center">
+                    <button type="button" class="btn btn-blue" data-toggle="modal" data-target="#redefinirSenha">
                         Redefinir senha
                     </button>
                     {% include "painel/contents/config/modals/redefinir.html.twig" %}
                 </div>
+                <div class="col-lg-4"></div>
             </div>
         </div>
     </div>
