--- a/templates/painel/contents/config/modals/redefinir.html.twig
+++ b/templates/painel/contents/config/modals/redefinir.html.twig
@@ -37,8 +37,8 @@
 
       {# Modal footer #}
       <div class="modal-footer">
-        <input id="senha-submit" type="submit" class="btn btn-success" value="Redefinir Senha">
-        <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
+        <input id="senha-submit" type="submit" class="btn btn-blue" value="Redefinir Senha">
+        <button type="button" class="btn btn-red" data-dismiss="modal">Fechar</button>
       </div>
       </form>
     </div>
