--- a/templates/painel/contents/feed/modals/edit_feed.html.twig
+++ b/templates/painel/contents/feed/modals/edit_feed.html.twig
@@ -22,8 +22,8 @@
 
       {# Modal footer #}
       <div class="modal-footer">
-        <input type="submit" class="btn btn-info" value="Editar">
-        <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
+        <input type="submit" class="btn btn-blue" value="Editar">
+        <button type="button" class="btn btn-red" data-dismiss="modal">Fechar</button>
       </div>
       </form>
     </div>
