--- a/templates/painel/contents/shop/modals/vip.html.twig
+++ b/templates/painel/contents/shop/modals/vip.html.twig
@@ -5,7 +5,7 @@
 
       {# Modal Header #}
       <div class="modal-header">
-        <h4 class="modal-title">Editar Categoria</h4>
+        <h4 class="modal-title">Adicionar VIP</h4>
         <button type="button" class="close" data-dismiss="modal">&times;</button>
       </div>
 
@@ -25,8 +25,8 @@
 
       {# Modal footer #}
       <div class="modal-footer">
-        <input type="submit" class="btn btn-info" value="Incluir">
-        <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
+        <input type="submit" class="btn btn-blue" value="Incluir">
+        <button type="button" class="btn btn-red" data-dismiss="modal">Fechar</button>
       </div>
       </form>
     </div>
