--- a/templates/painel/contents/admin/suport/suport.html.twig
+++ b/templates/painel/contents/admin/suport/suport.html.twig
@@ -27,21 +27,23 @@
                         <thead>
                             <tr>
                                 <th width="20%" class="text-center">ID</th>
-                                <th width="50%" class="text-center">Título</th>
-                                <th width="15%" class="text-center"></th>
-                                <th width="15%" class="text-center"></th>
+                                <th width="45%" class="text-center">Título</th>
+                                <th width="25%" class="text-center">Nome</th>
+                                <th width="5%" class="text-center"></th>
+                                <th width="5%" class="text-center"></th>
                             </tr>
                         </thead>
                         <tbody>
                             {% for item in data %}
                                 <tr>
                                     <td class="text-center">{{ item.id }}</td>
-                                    <td>{{ item.Title }}</td>
+                                    <td class="text-left">{{ item.Title }}</td>
+                                    <td class="text-center">{{ item.name }}</td>
                                     <td class="text-center"><a href="suport/ticket/{{item.id}}" class="rbtn-check" role="button"><i class="fa fa-check"></i></a></td>
                                     {% if item.status == 'Open' %}
                                         <td class="text-center"><a href="suport/ticket/close/{{item.id}}" class="rbtn-cancel" role="button"><i class="fa fa-times"></i></a></td>
                                     {% else %}
-                                        <td>Fechado</td>
+                                        <td class="text-center"><i class="fa fa-times"></i></td>
                                     {% endif %}
                                 </tr>
                             {% endfor %}
@@ -54,7 +56,7 @@
     </div>
     <div class="row" style="margin-top: 10px;">
         <div class="col-lg-4"></div>
-        <div class="col-lg-4 text-center" sty>
+        <div class="col-lg-4 text-center">
             <div class="navigation">
                 {{ knp_pagination_render(data) }}
             </div>
