--- a/templates/painel/contents/coin/modals/coin-50.html.twig
+++ b/templates/painel/contents/coin/modals/coin-50.html.twig
@@ -13,7 +13,7 @@
       <div class="modal-body">
         <div class="row">
           <div class="col-lg-12">
-            <img src="{{ asset('build/img/coin.png') }}">
+            <img src="{{ asset('build/img/5000IC.png') }}">
             <div>
               Li e aceito os Termos de Uso
             </div>
@@ -26,8 +26,8 @@
 
       {# Modal footer #}
       <div class="modal-footer">
-        <a href="{{ path('coin_50') }}" class="btn btn-success" role="button" target="_blank">Comprar</a>
-        <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
+        <a href="{{ path('coin_50') }}" class="btn btn-green" role="button" target="_blank">Comprar</a>
+        <button type="button" class="btn btn-red" data-dismiss="modal">Fechar</button>
       </div>
     </div>
   </div>
