--- a/templates/painel/contents/config/modals/atualizar.html.twig
+++ b/templates/painel/contents/config/modals/atualizar.html.twig
@@ -13,7 +13,7 @@
       <div class="modal-body">
         <form method="post" enctype="multipart/form-data" action="{{ path('config_user_info') }}">
         <div class="row">
-          <div class="col-lg-12">
+          <div class="col-lg-12 text-left">
             <div class="form-group">
               <label for="name">Nome de exibição:</label>
               <input type="text" class="form-control" id="name" name="name">
@@ -21,7 +21,7 @@
           </div>
         </div>
         <div class="row">
-          <div class="col-lg-12">
+          <div class="col-lg-12 text-left">
             <div class="form-group">
               <label for="email">Email:</label>
               <input type="text" class="form-control" id="email" name="email">
@@ -29,7 +29,7 @@
           </div>
         </div>
         <div class="row">
-          <div class="col-lg-12">
+          <div class="col-lg-12 text-left">
             <div class="custom-file">
               <input name="file" type="file" class="custom-file-input" id="file">
               <label class="custom-file-label" for="file">Foto do perfil</label>
@@ -40,8 +40,8 @@
 
       {# Modal footer #}
       <div class="modal-footer">
-        <input type="submit" class="btn btn-success" value="Editar">
-        <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
+        <input type="submit" class="btn btn-blue" value="Editar">
+        <button type="button" class="btn btn-red" data-dismiss="modal">Fechar</button>
       </div>
       </form>
     </div>
