--- a/templates/painel/contents/config/modals/msnconfig.html.twig
+++ b/templates/painel/contents/config/modals/msnconfig.html.twig
@@ -64,8 +64,8 @@
 
       {# Modal footer #}
       <div class="modal-footer">
-        <input type="submit" class="btn btn-success" value="Aplicar">
-        <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
+        <input type="submit" class="btn btn-blue" value="Aplicar">
+        <button type="button" class="btn btn-red" data-dismiss="modal">Fechar</button>
       </div>
       </form>
     </div>
