--- a/templates/painel/contents/feed/feed.html.twig
+++ b/templates/painel/contents/feed/feed.html.twig
@@ -15,7 +15,7 @@
             <div class="col-lg-8 text-right"></div>
             <div class="col-lg-2 text-right">
                 <div class="upload-btn-wrapper">
-                    {{form_row(post.image)}}
+                    {{form_widget(post.image)}}
                     {# <button class="btn">Upload a file</button>
                     <input type="file" name="myfile" /> #}
                 </div>
