--- a/templates/painel/contents/feed/modals/feed_report.html.twig
+++ b/templates/painel/contents/feed/modals/feed_report.html.twig
@@ -5,7 +5,7 @@
 
       {# Modal Header #}
       <div class="modal-header">
-        <h4 class="modal-title">Reportar</h4>
+        <h4 class="modal-title">Reportar Post</h4>
         <button type="button" class="close" data-dismiss="modal">&times;</button>
       </div>
 
@@ -22,8 +22,8 @@
 
       {# Modal footer #}
       <div class="modal-footer">
-        <input type="submit" class="btn btn-info" value="Reportar">
-        <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
+        <input type="submit" class="btn btn-blue" value="Reportar">
+        <button type="button" class="btn btn-red" data-dismiss="modal">Fechar</button>
       </div>
       </form>
     </div>
