--- a/templates/painel/contents/message/modals/message.html.twig
+++ b/templates/painel/contents/message/modals/message.html.twig
@@ -18,7 +18,7 @@
 
       {# Modal footer #}
       <div class="modal-footer">
-        <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-red" data-dismiss="modal">Fechar</button>
       </div>
     </div>
   </div>
