--- a/templates/painel/contents/shop/shop.html.twig
+++ b/templates/painel/contents/shop/shop.html.twig
@@ -35,25 +35,25 @@
     <div class="row" style="margin-top: 30px;">
         {% for item in data %}
             <div class="col-lg-3 item-content text-center">
-                <div style="grid-column: 1/3;"><img src="{{ asset('uploads/item/' ~ item.image)}}" style="width:100px"></div>
+                <div style="grid-column: 1/3; height: 100px; background: url({{ asset('uploads/item/' ~ item.image)}}) center center no-repeat;"><img src="{{ asset('build/img/borda.png')}}" style="width:100px;"></div>
                 <div style="grid-column: 1/3; height: 45px;"><small>{{ item.name }}</small></div>
                 {% if item.promo %}
-                    <div style="grid-column: 1; text-decoration: line-through;">{{ item.price }}</div>
-                    <div style="grid-column: 2;">{{ item.price - (item.price * (item.discount /100 )) }}</div>
+                    <div style="grid-column: 1; color: rgb(160,160,160); text-decoration: line-through;"><img src="{{ asset('build/img/infinitycoin.jpg') }}" style="width: 15px; border-radius: 100%; margin-right: 5px;">{{ item.price }}</div>
+                    <div style="grid-column: 2; color: lightyellow; background-color: rgb(10,100,100); border-radius: 100%;"><img src="{{ asset('build/img/infinitycoin.jpg') }}" style="width: 15px; border-radius: 100%; margin-right: 5px;">{{ item.price - (item.price * (item.discount /100 )) }}</div>
                 {% else %}
-                    <div style="grid-column: 1/3;">{{ item.price }}</div>
+                    <div style="grid-column: 1/3; margin-left: 50px; margin-right: 50px; color: lightyellow; background-color: rgb(10,100,100); border-radius: 100%;"><img src="{{ asset('build/img/infinitycoin.jpg') }}" style="width: 15px; border-radius: 100%; margin-right: 5px;">{{ item.price }}</div>
                 {% endif %}
                 {% set vip = item.aion|slice(0,3) %}
                 {% if vip == 519 %}
                     <div class="text-center" style="grid-column: 1/3;">
-                        <button type="button" class="btn btn-success" data-toggle="modal" data-target="#vipMember" data-id="{{ item.aion }}" data-set="{{ item.name }}">
-                            Comprar
+                        <button type="button" class="btn btn-warning" data-toggle="modal" data-target="#vipMember" data-id="{{ item.aion }}" data-set="{{ item.name }}">
+                            <i class="fa fa-dollar"></i> Comprar
                         </button>
                     </div>
                 {% else %}
                     <div class="text-center" style="grid-column: 1/3;">
-                        <button type="button" class="btn btn-success" data-toggle="modal" data-target="#showitem" data-id="{{ item.aion }}" data-set="{{ item.amount }}">
-                            Comprar
+                        <button type="button" class="btn btn-warning" data-toggle="modal" data-target="#showitem" data-id="{{ item.aion }}" data-set="{{ item.amount }}">
+                            <i class="fa fa-dollar"></i> Comprar
                         </button>
                     </div>
                 {% endif %}
