--- a/templates/painel/contents/suport/modals/ticket_new.html.twig
+++ b/templates/painel/contents/suport/modals/ticket_new.html.twig
@@ -13,17 +13,12 @@
       {# Modal body #}
       <div class="modal-body">
         <div class="row">
-          <div class="col-lg-12">
-            {{ form_row(ticket_new.type) }}
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-lg-12">
+          <div class="col-lg-12 text-left">
             {{ form_row(ticket_new.title) }}
           </div>
         </div>
         <div class="row">
-          <div class="col-lg-12">
+          <div class="col-lg-12 text-left">
             {{ form_row(ticket_new.message) }}
           </div>
         </div>
@@ -32,7 +27,7 @@
       {# Modal footer #}
       <div class="modal-footer">
         {{ form_row(ticket_new.submit) }}
-        <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-red" data-dismiss="modal">Fechar</button>
       </div>
     </div>
   </div>
