--- a/templates/painel/painel.html.twig
+++ b/templates/painel/painel.html.twig
@@ -21,7 +21,7 @@
       {% else %}
         <li><strong>{{status_name}}</strong></li>
       {% endif %}
-      <li>{{status_coins}}</li>
+      <li><img src="{{ asset('build/img/infinitycoin.jpg') }}" style="width: 15px; border-radius: 100%; margin-right: 5px;">{{status_coins}} IC</li>
     </ul>  
   </div>
   <div id="menu">
@@ -55,21 +55,21 @@
     {% set count = 0 %}
     {% for item in promo %}
       {% if count < 3 %}
-        <div class="row">
+        <div class="row" style="border-top: 2px solid white;">
           <div class="col-lg-12 item-content text-center">
-            <div style="grid-column: 1/3;"><img src="{{ asset('uploads/item/' ~ item.image)}}" style="width:100px"></div>
-            <div style="grid-column: 1/3; height: 45px;"><small>{{ item.name }}</small></div>
-            {% if item.promo %}
-                <div style="grid-column: 1; text-decoration: line-through;">{{ item.price }}</div>
-                <div style="grid-column: 2;">{{ item.price - (item.price * (item.discount /100 )) }}</div>
-            {% else %}
-                <div style="grid-column: 1/3;">{{ item.price }}</div>
-            {% endif %}
-            <div class="text-center" style="grid-column: 1/3;">
-                <button type="button" class="btn btn-success" data-toggle="modal" data-target="#showitem" data-id="{{ item.aionId }}" data-set="{{ item.amount }}">
-                    Comprar
-                </button>
-            </div>
+            <div style="grid-column: 1/3; height: 100px; background: url({{ asset('uploads/item/' ~ item.image)}}) center center no-repeat;"><img src="{{ asset('build/img/borda.png')}}" style="width:100px;"></div>
+                <div style="grid-column: 1/3; height: 45px;"><small>{{ item.name }}</small></div>
+                {% if item.promo %}
+                    <div style="grid-column: 1; color: rgb(160,160,160); text-decoration: line-through;"><img src="{{ asset('build/img/infinitycoin.jpg') }}" style="width: 15px; border-radius: 100%; margin-right: 5px;">{{ item.price }}</div>
+                    <div style="grid-column: 2; color: lightyellow; background-color: rgb(10,100,100); border-radius: 100%;"><img src="{{ asset('build/img/infinitycoin.jpg') }}" style="width: 15px; border-radius: 100%; margin-right: 5px;">{{ item.price - (item.price * (item.discount /100 )) }}</div>
+                {% else %}
+                    <div style="grid-column: 1/3; margin-left: 50px; margin-right: 50px; color: lightyellow; background-color: rgb(10,100,100); border-radius: 100%;"><img src="{{ asset('build/img/infinitycoin.jpg') }}" style="width: 15px; border-radius: 100%; margin-right: 5px;">{{ item.price }}</div>
+                {% endif %}
+                <div class="text-center" style="grid-column: 1/3;">
+                    <button type="button" class="btn btn-warning" data-toggle="modal" data-target="#showitem" data-id="{{ item.aionId }}" data-set="{{ item.amount }}">
+                        <i class="fa fa-dollar"></i> Comprar
+                    </button>
+                </div>
           </div>
         </div>
       {% endif %}
