--- a/templates/painel/contents/coin/modals/coin-30.html.twig
+++ b/templates/painel/contents/coin/modals/coin-30.html.twig
@@ -14,11 +14,11 @@
         <div class="row">
           <div class="col-lg-12">
             <img src="{{ asset('build/img/3000IC.png') }}">
-            <div>
-              Li e aceito os Termos de Uso
+            <div class="row text-left" style="margin-left: 10px; margin-top:10px;">
+              <strong style="font-size: 14px;">Li e aceito os Termos de Uso.</strong>
             </div>
-            <div>
-              Entendo que essa transação faz parte de uma doação
+            <div class="row text-left" style="margin-left: 10px;">
+              <strong style="font-size: 14px;">Entendo que essa transação se caracteriza como uma doação.</strong>
             </div>
           </div>
         </div>
