--- a/templates/painel/contents/feed/modals/edit_feed.html.twig
+++ b/templates/painel/contents/feed/modals/edit_feed.html.twig
@@ -15,7 +15,7 @@
           <input name="id" type="hidden" value="">
           <input name="direct" type="hidden" value="">
           <div class="form-group" id="postfeed">
-            <label for="postfeed">Editar Messagem:</label>
+            <label for="postfeed">Editar Mensagem:</label>
             <textarea class="form-control" rows="4" id="comment" name="comment"></textarea>
           </div>
       </div>
