--- a/templates/site/index.html.twig
+++ b/templates/site/index.html.twig
@@ -112,43 +112,93 @@
           <h3>Sobre o jogo</h3>
         </div>
       </div>
+    </div>
+    <div class="container">
       <div class="row">
         <div class="col-lg-4 col-sm-4 col-xs-12 text-center">
           <div class="jogo-box">
             <div class="title"><i class="fa fa-angle-double-up"></i></div>
-            <div class="info"></div>
+            <div class="info">
+              <div class="row">
+                <div class="col-lg-12">
+                  <h4 style="margin-top: 10px; color: tomato;">Core</h4>
+                  <div>Aion 4.0</div>
+                  <div>Dark Betrayal</div>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
         <div class="col-lg-4 col-sm-4 col-xs-12 text-center">
           <div class="jogo-box">
-            <div class="title"><i class="fa fa-angle-double-up"></i></div>
-            <div class="info"></div>
+            <div class="title"><i class="fa fa-star"></i></div>
+            <div class="info">
+              <div class="row">
+                <div class="col-lg-12">
+                  <h4 style="margin-top: 10px; color: tomato;">Sieges</h4>
+                  <div>Tiamaranta - 19:30 Seg - Sex</div>
+                  <div>Katalan/Danaria - 22:00</div>
+                  <div>Ter - Dom</div>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
         <div class="col-lg-4 col-sm-4 col-xs-12 text-center">
           <div class="jogo-box">
-            <div class="title"><i class="fa fa-angle-double-up"></i></div>
-            <div class="info"></div>
+            <div class="title"><i class="fa fa-arrow-up"></i></div>
+            <div class="info">
+              <div class="row">
+                <div class="col-lg-12">
+                  <h4 style="margin-top: 10px; color: tomato;">Rate</h4>
+                  <div>Normal/5x - VIP/8x</div>
+                  <div>AP: 1x</div>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </div>
       <div class="row">
         <div class="col-lg-4 col-sm-4 col-xs-12 text-center">
           <div class="jogo-box">
-            <div class="title"><i class="fa fa-angle-double-up"></i></div>
-            <div class="info"></div>
+            <div class="title"><i class="fa fa-flag"></i></div>
+            <div class="info">
+              <div class="row">
+                <div class="col-lg-12">
+                  <h4 style="margin-top: 10px; color: tomato;">Host</h4>
+                  <div>São Paulo (SP) - BR</div>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
         <div class="col-lg-4 col-sm-4 col-xs-12 text-center">
           <div class="jogo-box">
-            <div class="title"><i class="fa fa-angle-double-up"></i></div>
-            <div class="info"></div>
+            <div class="title"><i class="fa fa-bolt"></i></div>
+            <div class="info">
+              <div class="row">
+                <div class="col-lg-12">
+                  <h4 style="margin-top: 10px; color: tomato;">Player Painel</h4>
+                  <div>Feed de Notícias</div>
+                  <div>Infinity Shop</div>
+                  <div>Suport Técnico</div>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
         <div class="col-lg-4 col-sm-4 col-xs-12 text-center">
           <div class="jogo-box">
-            <div class="title"><i class="fa fa-angle-double-up"></i></div>
-            <div class="info"></div>
+            <div class="title"><i class="fa fa-comments"></i></div>
+            <div class="info">
+              <div class="row">
+                <div class="col-lg-12">
+                  <h4 style="margin-top: 10px; color: tomato;">Discord</h4>
+                  <div>https://discord.gg/Kt6uwH</div>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </div>
@@ -160,11 +210,14 @@
   <section id="download">
     <div class="container-fluid">
       <div class="row">
-        <div class="col-lg-6 col-sm-6 col-xs-12 text-center">
-          <a href="#" style="margin-top:50px;"><img src="{{ asset('build/img/d1.jpg') }}"></a>
+        <div class="col-lg-4 col-sm-4 col-xs-12 text-center">
+          <a href="#" style="margin-top:50px;"><img src="{{ asset('build/img/dl-client.png') }}"></a>
         </div>
-        <div class="col-lg-6 col-sm-6 col-xs-12 text-center">
-          <a href="#" style="margin-top:50px;"><img src="{{ asset('build/img/d2.jpg') }}"></a>
+        <div class="col-lg-4 col-sm-4 col-xs-12 text-center">
+          <a href="#" style="margin-top:50px;"><img src="{{ asset('build/img/dl-patch.png') }}"></a>
+        </div>
+        <div class="col-lg-4 col-sm-4 col-xs-12 text-center">
+          <a href="#" style="margin-top:50px;"><img src="{{ asset('build/img/dl2-client.png') }}"></a>
         </div>
       </div>
     </div>
