--- a/assets/css/painel.css
+++ b/assets/css/painel.css
@@ -61,7 +61,7 @@
     margin-left: -30px;
     margin-top: 5px;
     list-style: none;
-    font-family: 'Carrois Gothic SC', sans-serif;
+    font-family: 'Asul', sans-serif;
 }
 
 #sidenav #menu ul li {
@@ -148,6 +148,7 @@
     display: flex;
     justify-content: center;
     border-bottom: 3px solid tomato;
+    font-family: 'Asul', sans-serif;
 }
 
 /* shop */
