--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -22,7 +22,17 @@
         {% endblock %}
     </head>
     <body>
-        {% block body %}{% endblock %}
+        {% block body %}
+            {% for message in app.flashes('notice') %}
+                <div class="alert alert-success alert-dismissible">
+                <button type="button" class="close" data-dismiss="alert">&times;</button>
+                <strong>Success!</strong> Indicates a successful or positive action.
+                </div>
+                <div class="flash-notice">
+                    {{ message }}
+                </div>
+            {% endfor %}
+        {% endblock %}
         {% block javascripts %}
             {{ encore_entry_script_tags('app') }}
         {% endblock %}
