--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -3,40 +3,71 @@
 {% block title %}Log in!{% endblock %}
 
 {% block body %}
-<form method="post">
-    {% if error %}
-        <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
-    {% endif %}
+<div class="scroll">
+    <input type="radio" class="radio" name="grupo" id="rd_login">
+    <input type="radio" class="radio" name="grupo" id="rd_recover">
+    <section class="sections">
+        <section class="bloco" id="login" style="background-image: url({{ asset('build/img/login.jpg') }}); background-size: cover;">
+            <div style="background-image: url({{ asset('build/img/loginborder.png') }}); background-size: contain; background-repeat: no-repeat; background-position: center center; width: 500px; height: 500px; padding: 130px; padding-top:50px; align-items: center; color: lightblue;">
+                <form method="post">
+                    {% if error %}
+                        <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
+                    {% endif %}
 
-    {% if app.user %}
-        <div class="mb-3">
-            You are logged in as {{ app.user.username }}, <a href="{{ path('logout') }}">Logout</a>
-        </div>
-    {% endif %}
+                    {% if app.user %}
+                        <div class="mb-3">
+                            You are logged in as {{ app.user.username }}, <a href="{{ path('logout') }}">Logout</a>
+                        </div>
+                    {% endif %}
+                    <h1 class="h3 mb-3 font-weight-normal text-center">Login</h1>
+                    <label for="inputUsername">Username</label>
+                    <input type="text" value="{{ last_username }}" name="username" id="inputUsername" class="form-control" required autofocus>
+                    <label for="inputPassword">Password</label>
+                    <input type="password" name="password" id="inputPassword" class="form-control" required>
 
-    <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
-    <label for="inputUsername">Username</label>
-    <input type="text" value="{{ last_username }}" name="username" id="inputUsername" class="form-control" required autofocus>
-    <label for="inputPassword">Password</label>
-    <input type="password" name="password" id="inputPassword" class="form-control" required>
+                    <input type="hidden" name="_csrf_token"
+                        value="{{ csrf_token('authenticate') }}"
+                    >
 
-    <input type="hidden" name="_csrf_token"
-           value="{{ csrf_token('authenticate') }}"
-    >
+                    {#
+                        Uncomment this section and add a remember_me option below your firewall to activate remember me functionality.
+                        See https://symfony.com/doc/current/security/remember_me.html
 
-    {#
-        Uncomment this section and add a remember_me option below your firewall to activate remember me functionality.
-        See https://symfony.com/doc/current/security/remember_me.html
-
-        <div class="checkbox mb-3">
-            <label>
-                <input type="checkbox" name="_remember_me"> Remember me
-            </label>
-        </div>
-    #}
-
-    <button class="btn btn-lg btn-primary" type="submit">
-        Sign in
-    </button>
-</form>
+                        <div class="checkbox mb-3">
+                            <label>
+                                <input type="checkbox" name="_remember_me"> Remember me
+                            </label>
+                        </div>
+                    #}
+                    <div class="col-lg-12 text-center" style="margin-top: 10px;">
+                        <button class="btn btn-lg btn-primary" type="submit">
+                            Logar
+                        </button>
+                        <label for="rd_recover" style="margin-top: 10px;">Recuperar senha</label>
+                    </div>
+                    </form>
+            </div>
+        </section>
+        <section class="bloco" id="recover" style="background-image: url({{ asset('build/img/recover.jpg') }}); background-size: cover;">
+            <div style="background-image: url({{ asset('build/img/loginborder.png') }}); background-size: contain; background-repeat: no-repeat; background-position: center center; width: 500px; height: 500px; padding: 130px; padding-top:50px; align-items: center; color: lightblue;">
+                <form method="post" name="form-recover" action="{{ path('recover') }}">
+                    <h1 class="h3 mb-3 font-weight-normal text-center">Recuperar senha</h1>
+                    <label for="inputEmail">Email</label>
+                    <input type="text" name="email" id="inputEmail" class="form-control" required autofocus>
+                    <label for="inputPassword">Password</label>
+                    <input type="password" name="password" id="password" class="form-control" required>
+                    <label for="inputCPassword">Password</label>
+                    <input type="password" name="cpassword" id="cpassword" class="form-control" required>
+                    <div class="col-lg-12 text-center" style="margin-top: 10px;">
+                        <button class="btn btn-lg btn-primary" name="recover" type="submit">
+                            Recuperar
+                        </button><br>
+                        <label for="rd_login" style="margin-top: 10px;">Voltar para Login</label><br>
+                        <span style="color: red;" id="msg"></span>
+                    </div>
+                    </form>
+            </div>
+        </section>
+    </section>
+</div>
 {% endblock %}
