* ajuste atualizar dados

--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -18,7 +18,7 @@
                 </div>
                 {{ form_row(registrationForm.agreeTerms) }}
 
-                <button class="btn btn-success" name="register">Register</button>
+                <button class="btn btn-success" name="register">Register</button><br>
                 <span style="color: red;" id="msg"></span>
             {{ form_end(registrationForm) }}
         </div>
