--- a/templates/site/index.html.twig
+++ b/templates/site/index.html.twig
@@ -218,16 +218,16 @@
     <div class="container-fluid">
       <div class="row">
         <div class="col-lg-4 col-sm-4 col-xs-12 text-center">
-          <a href="#" style="margin-top:50px;"><img src="{{ asset('build/img/dl-client.png') }}"></a>
+          <a href="https://drive.google.com/file/d/15rRtgsE1M1a6JAgmHrSqVPrJm-dkwSq6/view?usp=sharing" style="margin-top:50px;"><img src="{{ asset('build/img/dl-client.png') }}"></a>
           <div style="margin-top: 30px;"><h4>Download do Patch</h4></div>
         </div>
         <div class="col-lg-4 col-sm-4 col-xs-12 text-center">
-          <a href="#" style="margin-top:50px;"><img src="{{ asset('build/img/dl-patch.png') }}"></a>
-          <div style="margin-top: 30px;"><h4>Download do Patch</h4></div>
+          <a href="https://drive.google.com/file/d/1ZkoWi1wqX-XOMyO1WELFoc8EzdOscj4G/view?usp=sharing" style="margin-top:50px;"><img src="{{ asset('build/img/dl-patch.png') }}"></a>
+          <div style="margin-top: 30px;"><h4>Download do Client 4.0 (Torrent)</h4></div>
         </div>
         <div class="col-lg-4 col-sm-4 col-xs-12 text-center">
           <a href="#" style="margin-top:50px;"><img src="{{ asset('build/img/dl2-client.png') }}"></a>
-          <div style="margin-top: 30px;"><h4>Download do Patch</h4></div>
+          <div style="margin-top: 30px;"><h4>Download do Client 4.0</h4></div>
         </div>
       </div>
     </div>
