--- a/templates/painel/contents/feed/feed.html.twig
+++ b/templates/painel/contents/feed/feed.html.twig
@@ -31,9 +31,9 @@
                     <div class="row">
                         <div class="col-lg-2 text-center">
                             {% if item.user_image != '' %}
-                                <img src="{{ asset('uploads/profile/' ~ item.user_image)}}" style="width: 50px; border-radius:100%;">
+                                <img src="{{ asset('uploads/profile/' ~ item.user_image)}}" style="width: 50px; height: 50px; border-radius:100%;">
                             {% else %}
-                                <img src="{{ asset('build/img/perfil.jpg')}}" style="width: 50px; border-radius:100%;">
+                                <img src="{{ asset('build/img/perfil.jpg')}}" style="width: 50px; height: 50px; border-radius:100%;">
                             {% endif %}
                         </div>
                         <div class="col-lg-7">
@@ -89,9 +89,9 @@
                                 <div class="row">
                                     <div class="col-lg-2">
                                         {% if comment.user_image != '' %}
-                                            <img src="{{ asset('uploads/profile/' ~ comment.user_image)}}" style="width: 50px; border-radius:100%;">
+                                            <img src="{{ asset('uploads/profile/' ~ comment.user_image)}}" style="width: 50px; height: 50px; border-radius:100%;">
                                         {% else %}
-                                            <img src="{{ asset('build/img/perfil.jpg')}}" style="width: 50px; border-radius:100%;">
+                                            <img src="{{ asset('build/img/perfil.jpg')}}" style="width: 50px; height: 50px; border-radius:100%;">
                                         {% endif %}
                                     </div>
                                     <div class="col-lg-9">
