--- a/templates/painel/contents/feed/feed_full.html.twig
+++ b/templates/painel/contents/feed/feed_full.html.twig
@@ -10,9 +10,9 @@
                     <div class="row">
                         <div class="col-lg-2 text-center">
                             {% if feeds[0].user_image != '' %}
-                                <img src="{{ asset('uploads/profile/' ~ feeds[0].user_image)}}" style="width: 50px; border-radius:100%;">
+                                <img src="{{ asset('uploads/profile/' ~ feeds[0].user_image)}}" style="width: 50px; height: 50px; border-radius:100%;">
                             {% else %}
-                                <img src="{{ asset('build/img/perfil.jpg')}}" style="width: 50px; border-radius:100%;">
+                                <img src="{{ asset('build/img/perfil.jpg')}}" style="width: 50px; height: 50px; border-radius:100%;">
                             {% endif %}
                         </div>
                         <div class="col-lg-8">
@@ -64,9 +64,9 @@
                                 <div class="row">
                                     <div class="col-lg-2">
                                         {% if comment.user_image != '' %}
-                                            <img src="{{ asset('uploads/profile/' ~ comment.user_image)}}" style="width: 50px; border-radius:100%;">
+                                            <img src="{{ asset('uploads/profile/' ~ comment.user_image)}}" style="width: 50px; height: 50px; border-radius:100%;">
                                         {% else %}
-                                            <img src="{{ asset('build/img/perfil.jpg')}}" style="width: 50px; border-radius:100%;">
+                                            <img src="{{ asset('build/img/perfil.jpg')}}" style="width: 50px; height: 50px; border-radius:100%;">
                                         {% endif %}
                                     </div>
                                     <div class="col-lg-9">
