--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -4,8 +4,8 @@
 
 {% block body %}
 <section id="register" style="background-image: url({{ asset('build/img/register.jpg') }}); background-size: cover;">
-    <div class="row" style="margin-left: 40vw; width: 30vw;">
-        <div class="col-lg-12 text-left">
+    <div class="row" style="padding-bottom: 10px; margin-left: 40vw; width: 30vw; background-color: rgba(50,50,50,.7); box-shadow: 5px 5px 5px rgb(20,20,20);">
+        <div class="col-lg-12 text-left" style="color: rgb(200,200,200);">
             <h1>Registrar-se</h1>
             {{ form_start(registrationForm) }}
                 {{ form_row(registrationForm.username) }}
@@ -18,8 +18,8 @@
                 </div>
                 {{ form_row(registrationForm.agreeTerms) }}
 
-                <button class="btn btn-success" name="register">Register</button><br>
-                <span style="color: red;" id="msg"></span>
+                <button class="btn btn-success" name="register">Register</button>
+                <span style="color: red; margin-left: 20px;" id="msg"></span>
             {{ form_end(registrationForm) }}
         </div>
     </div>
