--- a/assets/css/buttons.css
+++ b/assets/css/buttons.css
@@ -168,3 +168,26 @@
     transition: linear .2s;
     text-decoration: none;
 }
+
+.btn-white{
+    /* font-family: 'Palanquin', sans-serif; */
+    font-family: 'Carrois Gothic SC', sans-serif;
+    padding-top: 5px;
+    width: auto;
+    height: 40px;
+    border-radius: 5px;
+    display: block;
+    color: white;
+    border: 2px solid white;
+    transition: linear .2s;
+    background-color: none;
+}
+
+.btn-white:hover{
+    background-color: white;
+    border: 2px solid white;
+    color: black;
+    box-shadow: 0px 0px 2px 2px white;
+    transition: linear .2s;
+    text-decoration: none;
+}
