--- a/templates/site/isolate.html.twig
+++ b/templates/site/isolate.html.twig
@@ -9,7 +9,7 @@
 {% block body %}
   <div class="container">
     <div class="banner">
-      <img src="({{ asset('uploads/cms/' ~ data.imageSmall)}})">
+      <img src="{{ asset('uploads/cms/' ~ data.imageSmall)}}" style="width: 100%;">
     </div>
   </div>
   <div class="container">
