--- a/templates/site/index.html.twig
+++ b/templates/site/index.html.twig
@@ -87,6 +87,18 @@
   </section>
   {# End Carousel #}
 
+  {# Video #}
+  <section id="video">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-12 text-center">
+          <iframe width="1024" height="576" src="https://www.youtube.com/embed/crwgSgtf3oE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div>
+      </div>
+    </div>
+  </section>
+  {# end Video #}
+
   {# ++++++++++ Noticias +++++++++++ #}
   <section id="noticias">
     <div class="container">
@@ -98,7 +110,7 @@
       <div class="row">
         <div class="col-lg-3 col-sm-6 col-xs-12 text-center">
           <div class="noticias-box">
-            <a href="#"><img src="{{ asset('uploads/cms/notes.jpg') }}"></a>
+            <a href="https://drive.google.com/file/d/1resTUTSWeK1NJb1QgO5I9LBxCbyPwf4J/view?usp=sharing"><img src="{{ asset('uploads/cms/notes.png') }}"></a>
           </div>
         </div>
         {% set count = 0 %}
@@ -232,7 +244,7 @@
           <div style="margin-top: 30px;"><h4>Download do Client 4.0 (Torrent)</h4></div>
         </div>
         <div class="col-lg-4 col-sm-4 col-xs-12 text-center">
-          <a href="#" style="margin-top:50px;"><img src="{{ asset('build/img/dl2-client.png') }}"></a>
+          <a href="https://drive.google.com/drive/folders/1VbYd5DCjaG94NqM6G7OSMZ3LW3lQb_L6?usp=sharing" style="margin-top:50px;"><img src="{{ asset('build/img/dl2-client.png') }}"></a>
           <div style="margin-top: 30px;"><h4>Download do Client 4.0</h4></div>
         </div>
       </div>
