--- a/templates/painel/painel.html.twig
+++ b/templates/painel/painel.html.twig
@@ -29,7 +29,7 @@
       <li><a href="{{ path('feed') }}"><i class="fa fa-rss"></i>Feed de Notícias</a></li>
       {# <li><a href="#"><i class="fa fa-users"></i>Personagens</a></li> #}
       <li><a href="{{ path('message') }}"><i class="fa fa-envelope"></i>Mensagens</a></li>
-      <li><a href="#"><i class="fa fa-book"></i>Ranking</a></li>
+      <li><a href="{{ path('ranking') }}"><i class="fa fa-book"></i>Ranking</a></li>
       <li><a href="{{ path('shop') }}" class="shop"><i class="fa fa-tags"></i>Infinity Shop</a></li>
       <li><a href="{{ path('coin') }}" class="shop"><i class="fa fa-credit-card"></i>Infinity Coin</a></li>
       <li><a href="{{ path('history') }}"><i class="fa fa-history"></i>Histórico</a></li>
