--- a/templates/painel/contents/coin/modals/coin-80.html.twig
+++ b/templates/painel/contents/coin/modals/coin-80.html.twig
@@ -13,7 +13,7 @@
       <div class="modal-body">
         <div class="row">
           <div class="col-lg-12">
-            <img src="{{ asset('build/img/8000IC.png') }}">
+            <img src="{{ asset('build/img/8000IC.png') }}" style="width: 400px;">
             <div class="row text-left" style="margin-left: 10px; margin-top:10px;">
               <strong style="font-size: 14px;">Li e aceito os Termos de Uso.</strong>
             </div>
