--- a/templates/painel/contents/admin/itens/itens.html.twig
+++ b/templates/painel/contents/admin/itens/itens.html.twig
@@ -48,7 +48,7 @@
                                 <td class="text-center">{{ item.aion }}</td>
                                 <td>{{ item.name }}</td>
                                 <td class="text-center">
-                                    <button type="button" class="rbtn-edit" data-toggle="modal" data-target="#editItem" data-id="{{item.aion}}">
+                                    <button type="button" class="rbtn-edit" data-toggle="modal" data-target="#editItem" data-id="{{item.aion}}" data-level="{{item.level}}" data-name="{{item.name}}" data-price="{{item.price}}" data-amount="{{item.amount}}" data-discount="{{item.discount}}" data-bbcode="{{item.bbcode}}">
                                         <i class="fa fa-pencil"></i>
                                     </button>
                                 </td>
