--- a/templates/painel/contents/shop/modals/show_item.html.twig
+++ b/templates/painel/contents/shop/modals/show_item.html.twig
@@ -12,6 +12,7 @@
       {# Modal body #}
       <div class="modal-body">
         <form name="formshop" action="{{ path('shop_buy') }}">
+          <div class="text-center" style="margin-bottom: 20px;"><img name="image" src=""></div>
           <input name="aionId" type="hidden" value="">
           <div class="form-group">
           <label for="charselect">Selecione um Personagem:</label>
