--- a/templates/painel/contents/shop/shop.html.twig
+++ b/templates/painel/contents/shop/shop.html.twig
@@ -34,40 +34,86 @@
     {% set divisor = 1 %}
     <div class="row">
         {% for item in data %}
-            <div class="col-lg-3 item-content text-center" style="margin-top: 50px;">
-                <div style="grid-column: 1/3; height: 80px; background: url({{ asset('build/img/shop/' ~ item.aion ~ '.png')}}) center center no-repeat; background-size: contain;"><img src="{{ asset('build/img/borda.png')}}" style="width:80px;"></div>
-                <div style="grid-column: 1/3; height: 45px;"><small>{{ item.name }}</small></div>
-                {% if item.promo %}
-                    <div style="grid-column: 1; color: rgb(160,160,160); text-decoration: line-through;"><img src="{{ asset('build/img/infinitycoin.jpg') }}" style="width: 15px; border-radius: 100%; margin-right: 5px;">{{ item.price }}</div>
-                    <div style="grid-column: 2; color: lightyellow; background-color: rgb(10,100,100); border-radius: 100%;"><img src="{{ asset('build/img/infinitycoin.jpg') }}" style="width: 15px; border-radius: 100%; margin-right: 5px;">{{ item.price - (item.price * (item.discount /100 )) }}</div>
+            {% if item.aion == 169630003 %}
+                {% if cube[0].countItem <= 3 %}
+                    <div class="col-lg-3 item-content text-center" style="margin-top: 50px;">
+                        <div style="grid-column: 1/3; height: 80px; background: url({{ asset('build/img/shop/' ~ item.aion ~ '.png')}}) center center no-repeat; background-size: contain;"><img src="{{ asset('build/img/borda.png')}}" style="width:80px;"></div>
+                        <div style="grid-column: 1/3; height: 45px;"><small>{{ item.name }}</small></div>
+                        {% if item.promo %}
+                            <div style="grid-column: 1; color: rgb(160,160,160); text-decoration: line-through;"><img src="{{ asset('build/img/infinitycoin.jpg') }}" style="width: 15px; border-radius: 100%; margin-right: 5px;">{{ item.price }}</div>
+                            <div style="grid-column: 2; color: lightyellow; background-color: rgb(10,100,100); border-radius: 100%;"><img src="{{ asset('build/img/infinitycoin.jpg') }}" style="width: 15px; border-radius: 100%; margin-right: 5px;">{{ item.price - (item.price * (item.discount /100 )) }}</div>
+                        {% else %}
+                            <div style="grid-column: 1/3; margin-left: 50px; margin-right: 50px; color: lightyellow; background-color: rgb(10,100,100); border-radius: 100%;"><img src="{{ asset('build/img/infinitycoin.jpg') }}" style="width: 15px; border-radius: 100%; margin-right: 5px;">{{ item.price }}</div>
+                        {% endif %}
+                        <div class="text-center">
+                            <button type="button" class="btn btn-warning" data-toggle="modal" data-target="#showitem" data-id="{{ item.aion }}" data-set="{{ item.amount }}">
+                                <i class="fa fa-dollar"></i> Comprar
+                            </button>
+                        </div>
+                        <div class="text-center">
+                            <button type="button" class="btn btn-success" data-toggle="modal" data-target="#itemPresente" data-id="{{ item.aion }}" data-set="{{ item.name }}">
+                                <i class="fa fa-gift"></i> Presente
+                            </button>
+                        </div>
+                    </div>
                 {% else %}
-                    <div style="grid-column: 1/3; margin-left: 50px; margin-right: 50px; color: lightyellow; background-color: rgb(10,100,100); border-radius: 100%;"><img src="{{ asset('build/img/infinitycoin.jpg') }}" style="width: 15px; border-radius: 100%; margin-right: 5px;">{{ item.price }}</div>
-                {% endif %}
-                {% set vip = item.aion|slice(0,3) %}
-                {% if vip == 519 %}
-                    <div class="text-center" style="font-size: 12px;">
-                        <button type="button" class="btn btn-warning" data-toggle="modal" data-target="#vipMember" data-id="{{ item.aion }}" data-set="{{ item.name }}">
-                            <i class="fa fa-dollar"></i> Comprar
-                        </button>
-                    </div>
-                    <div class="text-center" style="font-size: 12px;">
-                        <button type="button" class="btn btn-success btn-small" data-toggle="modal" data-target="#itemPresente" data-id="{{ item.aion }}" data-set="{{ item.name }}">
-                            <i class="fa fa-gift"></i> Presente
-                        </button>
-                    </div>
-                {% else %}
-                    <div class="text-center">
-                        <button type="button" class="btn btn-warning" data-toggle="modal" data-target="#showitem" data-id="{{ item.aion }}" data-set="{{ item.amount }}">
-                            <i class="fa fa-dollar"></i> Comprar
-                        </button>
-                    </div>
-                    <div class="text-center">
-                        <button type="button" class="btn btn-success" data-toggle="modal" data-target="#itemPresente" data-id="{{ item.aion }}" data-set="{{ item.name }}">
-                            <i class="fa fa-gift"></i> Presente
-                        </button>
+                    <div class="col-lg-3 item-content text-center" style="margin-top: 50px;">
+                        <div style="grid-column: 1/3; height: 80px; background: url({{ asset('build/img/shop/' ~ item.aion ~ '.png')}}) center center no-repeat; background-size: contain;"><img src="{{ asset('build/img/borda.png')}}" style="width:80px;"></div>
+                        <div style="grid-column: 1/3; height: 45px;"><small>{{ item.name }}</small></div>
+                        {% if item.promo %}
+                            <div style="grid-column: 1; color: rgb(160,160,160); text-decoration: line-through;"><img src="{{ asset('build/img/infinitycoin.jpg') }}" style="width: 15px; border-radius: 100%; margin-right: 5px;">{{ item.price }}</div>
+                            <div style="grid-column: 2; color: lightyellow; background-color: rgb(10,100,100); border-radius: 100%;"><img src="{{ asset('build/img/infinitycoin.jpg') }}" style="width: 15px; border-radius: 100%; margin-right: 5px;">{{ item.price - (item.price * (item.discount /100 )) }}</div>
+                        {% else %}
+                            <div style="grid-column: 1/3; margin-left: 50px; margin-right: 50px; color: lightyellow; background-color: rgb(10,100,100); border-radius: 100%;"><img src="{{ asset('build/img/infinitycoin.jpg') }}" style="width: 15px; border-radius: 100%; margin-right: 5px;">{{ item.price }}</div>
+                        {% endif %}
+                        <div class="text-center">
+                            <button type="button" class="btn btn-secondary" data-toggle="modal" data-target="#showitem" data-id="{{ item.aion }}" data-set="{{ item.amount }}" disabled>
+                                <i class="fa fa-dollar"></i> Comprar
+                            </button>
+                        </div>
+                        <div class="text-center">
+                            <button type="button" class="btn btn-success" data-toggle="modal" data-target="#itemPresente" data-id="{{ item.aion }}" data-set="{{ item.name }}">
+                                <i class="fa fa-gift"></i> Presente
+                            </button>
+                        </div>
                     </div>
                 {% endif %}
-            </div>
+            {% else %}
+                <div class="col-lg-3 item-content text-center" style="margin-top: 50px;">
+                    <div style="grid-column: 1/3; height: 80px; background: url({{ asset('build/img/shop/' ~ item.aion ~ '.png')}}) center center no-repeat; background-size: contain;"><img src="{{ asset('build/img/borda.png')}}" style="width:80px;"></div>
+                    <div style="grid-column: 1/3; height: 45px;"><small>{{ item.name }}</small></div>
+                    {% if item.promo %}
+                        <div style="grid-column: 1; color: rgb(160,160,160); text-decoration: line-through;"><img src="{{ asset('build/img/infinitycoin.jpg') }}" style="width: 15px; border-radius: 100%; margin-right: 5px;">{{ item.price }}</div>
+                        <div style="grid-column: 2; color: lightyellow; background-color: rgb(10,100,100); border-radius: 100%;"><img src="{{ asset('build/img/infinitycoin.jpg') }}" style="width: 15px; border-radius: 100%; margin-right: 5px;">{{ item.price - (item.price * (item.discount /100 )) }}</div>
+                    {% else %}
+                        <div style="grid-column: 1/3; margin-left: 50px; margin-right: 50px; color: lightyellow; background-color: rgb(10,100,100); border-radius: 100%;"><img src="{{ asset('build/img/infinitycoin.jpg') }}" style="width: 15px; border-radius: 100%; margin-right: 5px;">{{ item.price }}</div>
+                    {% endif %}
+                    {% set vip = item.aion|slice(0,3) %}
+                    {% if vip == 519 %}
+                        <div class="text-center" style="font-size: 12px;">
+                            <button type="button" class="btn btn-warning" data-toggle="modal" data-target="#vipMember" data-id="{{ item.aion }}" data-set="{{ item.name }}">
+                                <i class="fa fa-dollar"></i> Comprar
+                            </button>
+                        </div>
+                        <div class="text-center" style="font-size: 12px;">
+                            <button type="button" class="btn btn-success btn-small" data-toggle="modal" data-target="#itemPresente" data-id="{{ item.aion }}" data-set="{{ item.name }}">
+                                <i class="fa fa-gift"></i> Presente
+                            </button>
+                        </div>
+                    {% else %}
+                        <div class="text-center">
+                            <button type="button" class="btn btn-warning" data-toggle="modal" data-target="#showitem" data-id="{{ item.aion }}" data-set="{{ item.amount }}">
+                                <i class="fa fa-dollar"></i> Comprar
+                            </button>
+                        </div>
+                        <div class="text-center">
+                            <button type="button" class="btn btn-success" data-toggle="modal" data-target="#itemPresente" data-id="{{ item.aion }}" data-set="{{ item.name }}">
+                                <i class="fa fa-gift"></i> Presente
+                            </button>
+                        </div>
+                    {% endif %}
+                </div>
+            {% endif %}
             {% if divisor == 4 %}
                 </div>
                 <div class="row">
