--- a/templates/site/index.html.twig
+++ b/templates/site/index.html.twig
@@ -161,9 +161,9 @@
               <div class="row">
                 <div class="col-lg-12">
                   <h4 style="margin-top: 10px; color: tomato;">Sieges</h4>
-                  <div>Tiamaranta - 19:30 Seg - Sex</div>
-                  <div>Katalan/Danaria - 22:00</div>
-                  <div>Ter - Dom</div>
+                  <div>Tiamaranta - 21:00 Ter e Qui</div>
+                  <div>Katalan/Danaria - 21:00</div>
+                  <div>Sex - Dom</div>
                 </div>
               </div>
             </div>
@@ -176,8 +176,8 @@
               <div class="row">
                 <div class="col-lg-12">
                   <h4 style="margin-top: 10px; color: tomato;">Rate</h4>
-                  <div>Normal/5x - VIP/8x</div>
-                  <div>AP: 1x</div>
+                  <div>EXP: Normal/10x - VIP/20x</div>
+                  <div>AP: Normal/1x - VIP/2x</div>
                 </div>
               </div>
             </div>
@@ -220,7 +220,7 @@
               <div class="row">
                 <div class="col-lg-12">
                   <h4 style="margin-top: 10px; color: tomato;">Discord</h4>
-                  <div>https://discord.gg/Kt6uwH</div>
+                  <div>https://discord.gg/GSZ9NzF</div>
                 </div>
               </div>
             </div>
@@ -236,7 +236,7 @@
     <div class="container-fluid">
       <div class="row">
         <div class="col-lg-4 col-sm-4 col-xs-12 text-center">
-          <a href="https://drive.google.com/file/d/15rRtgsE1M1a6JAgmHrSqVPrJm-dkwSq6/view?usp=sharing" style="margin-top:50px;"><img src="{{ asset('build/img/dl-client.png') }}"></a>
+          <a href="https://drive.google.com/file/d/1_nN_UGVi8KPGCkxOGjD0L60WUHUfjSpR/view?usp=sharing" style="margin-top:50px;"><img src="{{ asset('build/img/dl-client.png') }}"></a>
           <div style="margin-top: 30px;"><h4>Download do Patch</h4></div>
         </div>
         <div class="col-lg-4 col-sm-4 col-xs-12 text-center">
