--- a/templates/painel/painel.html.twig
+++ b/templates/painel/painel.html.twig
@@ -59,7 +59,7 @@
     {% set rgb = 50 %}
     {% for item in promo %}
       {% if count < 3 %}
-        <div class="row" style="background-color: rgb({{rgb}},{{rgb}},{{rgb}}); margin-left: 0px;">
+        <div class="row" style="background-color: rgb({{rgb}},{{rgb}},{{rgb}}); margin-left: auto; margin-right: auto;">
           <div class="col-lg-12 item-content text-center">
             <div style="grid-column: 1/3; height: 80px; background: url({{ asset('build/img/shop/' ~ item.aionId ~ '.png')}}) center center no-repeat; background-size: contain;"><img src="{{ asset('build/img/borda.png')}}" style="width:80px;"></div>
             <div style="grid-column: 1/3; height: 45px;"><small>{{ item.name }}</small></div>
